@@ -5,12 +5,13 @@ v5.0.0.0
 - Removed the Custom Login and Logout windows (Now editable from the Players tab).
 - Added Plugin API.
 - Now Supports WOM texturing.
-- Added /Waypoint.
+- Added /waypoint.
 - Added /topten.
 - Added /faq.
 - Added /maze.
 - Added /draw. 
 - Reverted to old CLI Interface due to an issue where the server would lock up when the console used an invalid command. 
+- Remade the Economy system. Now consolidated into 1 command '/economy' and 1 properties file
 
 v4.9.0.0
 - Fixed a bug in /pyramid
